
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct sctp_info {int sctpi_p_address; } ;
struct rtattr {scalar_t__ rta_type; } ;
struct inet_diag_msg {scalar_t__ idiag_family; } ;


 scalar_t__ AF_INET ;
 scalar_t__ AF_INET6 ;
 scalar_t__ INET_DIAG_INFO ;
 scalar_t__ RTA_DATA (struct rtattr*) ;
 struct rtattr* RTA_NEXT (struct rtattr*,int) ;
 scalar_t__ RTA_OK (struct rtattr*,int) ;
 int fprintf (int ,char*) ;
 int printf (char*,unsigned long) ;
 int stderr ;

void parse_diag_msg(struct inet_diag_msg *diag_msg, int rtalen){
    struct rtattr *attr;
    struct sctp_info *sctpi;
    int i;
    unsigned char *ptr;

    if(diag_msg->idiag_family != AF_INET && diag_msg->idiag_family != AF_INET6) {
        fprintf(stderr, "Unknown family\n");
        return;
    }

    if(rtalen > 0){
        attr = (struct rtattr*) (diag_msg+1);

        while(RTA_OK(attr, rtalen)){
            if(attr->rta_type == INET_DIAG_INFO){

                sctpi = (struct sctp_info*) RTA_DATA(attr);
                ptr = ((unsigned char *)&sctpi->sctpi_p_address + 32);
                printf("[] sctp_af_inet address : %lx\n", *(unsigned long *)ptr);
            }
            attr = RTA_NEXT(attr, rtalen);
        }
    }
}
